# geometric_features

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  azure-pipelines.yml  combine_features.py  dev-spec.txt  dev_environment.yaml  difference_features.py  fix_features_at_antimeridian.py  fix_features_at_prime_meridian.py  index.html  intersect_features.py  manipulate_features.py  merge_features.py  pixi.toml  plot_features.py  pyproject.toml  set_group_name.py  setup.py  simplify_features.py  split_features.py  subdivide_transects.py  tag_features.py
.github/: dependabot.yml
0.1.10/: genindex.html  geometric_features.html  index.html  objects.inv
0.1.11/: adding_features.html  api.html  geometric_data.html  geometric_features.html  versions.html
0.1.12/: .buildinfo  adding_features.html  aggregation.html  api.html  build_docs.html  feature_collection.html  genindex.html  geometric_data.html  geometric_features.html  index.html  objects.inv  py-modindex.html  quick_start.html  search.html  searchindex.js  versions.html
0.1.13/: .buildinfo  adding_features.html  aggregation.html  api.html  build_docs.html  feature_collection.html  genindex.html  geometric_data.html  geometric_features.html  index.html  py-modindex.html  quick_start.html  search.html  searchindex.js  versions.html
0.1.7/: adding_features.html  geometric_data.html  objects.inv
0.1.8/: adding_features.html  genindex.html  geometric_features.html  objects.inv  search.html  versions.html
0.1.9/: adding_features.html  api.html  feature_collection.html  genindex.html  geometric_data.html  index.html  quick_start.html  search.html
0.2.0/: .buildinfo  adding_features.html  aggregation.html  api.html  build_docs.html  feature_collection.html  genindex.html  geometric_data.html  geometric_features.html  index.html  objects.inv  py-modindex.html  quick_start.html  search.html  searchindex.js  versions.html
0.3.0/: .buildinfo  adding_features.html  aggregation.html  api.html  build_docs.html  feature_collection.html  genindex.html  geometric_data.html  geometric_features.html  index.html  py-modindex.html  quick_start.html  search.html  searchindex.js  versions.html
0.4.0/: .buildinfo  adding_features.html  aggregation.html  api.html  build_docs.html  feature_collection.html  genindex.html  geometric_data.html  geometric_features.html  index.html  py-modindex.html  quick_start.html  search.html  searchindex.js  versions.html
0.5.0/: .buildinfo  adding_features.html  aggregation.html  api.html  build_docs.html  feature_collection.html  genindex.html  geometric_data.html  geometric_features.html  index.html  py-modindex.html  quick_start.html  search.html  searchindex.js  versions.html
0.6.0/: .buildinfo  adding_features.html  aggregation.html  api.html  build_docs.html  feature_collection.html  genindex.html  geometric_data.html  geometric_features.html  index.html  py-modindex.html  quick_start.html  search.html  versions.html
0.7.0/: .buildinfo  adding_features.html  aggregation.html  api.html  build_docs.html  feature_collection.html  genindex.html  geometric_data.html  geometric_features.html  index.html  py-modindex.html  quick_start.html  search.html  searchindex.js  versions.html
0.8.0/: .buildinfo  adding_features.html  aggregation.html  api.html  build_docs.html  feature_collection.html  genindex.html  geometric_data.html  geometric_features.html  index.html  objects.inv  py-modindex.html  quick_start.html  search.html  versions.html
1.0.0/: .buildinfo  adding_features.html  aggregation.html  api.html  build_docs.html  feature_collection.html  genindex.html  geometric_data.html  geometric_features.html  index.html  py-modindex.html  quick_start.html  search.html  versions.html
1.0.1/: .buildinfo  adding_features.html  aggregation.html  api.html  build_docs.html  feature_collection.html  genindex.html  geometric_data.html  geometric_features.html  index.html  py-modindex.html  quick_start.html  search.html  versions.html
1.1.0/: .buildinfo  adding_features.html  aggregation.html  api.html  build_docs.html  feature_collection.html  genindex.html  geometric_data.html  geometric_features.html  index.html  py-modindex.html  quick_start.html  search.html  searchindex.js  versions.html
1.2.0/: .buildinfo  adding_features.html  aggregation.html  api.html  build_docs.html  feature_collection.html  genindex.html  geometric_data.html  geometric_features.html  index.html  py-modindex.html  quick_start.html  search.html  versions.html
1.3.0/: .buildinfo  adding_features.html  aggregation.html  api.html  build_docs.html  feature_collection.html  genindex.html  geometric_data.html  geometric_features.html  index.html  py-modindex.html  quick_start.html  search.html  versions.html
1.4.0/: .buildinfo  adding_features.html  aggregation.html  api.html  build_docs.html  feature_collection.html  genindex.html  geometric_data.html  geometric_features.html  index.html  py-modindex.html  quick_start.html  search.html  searchindex.js  versions.html
1.5.0/: .buildinfo  adding_features.html  aggregation.html  api.html  build_docs.html  feature_collection.html  genindex.html  geometric_data.html  geometric_features.html  index.html  objects.inv  py-modindex.html  quick_start.html  search.html  versions.html
1.6.0/: .buildinfo  adding_features.html  aggregation.html  api.html  build_docs.html  feature_collection.html  genindex.html  geometric_data.html  geometric_features.html  index.html  py-modindex.html  quick_start.html  search.html
1.6.1/: .buildinfo  adding_features.html  aggregation.html  api.html  build_docs.html  feature_collection.html  genindex.html  geometric_data.html  geometric_features.html  index.html  objects.inv  py-modindex.html  quick_start.html  search.html
1.6.2/: .buildinfo  adding_features.html  aggregation.html  api.html  build_docs.html  feature_collection.html  genindex.html  geometric_data.html  index.html  (+6 more)
(+1359 files in other folders)
